--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <div class=" text-center">
-        <h1 class="display-4">New York Times Scraper</h1>
+        <h1 class="display-4">New York Times Sports Scraper</h1>
         <p></p>
     </div>
 
