--- a/public/savedarticles.html
+++ b/public/savedarticles.html
@@ -1,2 +1,50 @@
-code for the saved articles page would go here.
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Scraping With Mongoose</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/style.css" />
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="btn btn-danger" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-danger scrape-new">Scrape Articles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-danger clear">Clear Articles</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="caption text-center">
+        <h1>Saved Articles</h1>
+        <p>Your Saved Articles</p>
+    </div>
+
+    <div id="wrapper">
+        <div id="articles"></div>
+        <div id="notes"></div>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/saved.js"></script>
+</body>
+
+</html>
