--- a/public/saved.html
+++ b/public/saved.html
@@ -44,7 +44,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/saved.js"></script>
+    <script src="/Public/saved.js"></script>
 </body>
 
 </html>
