added div id notes to div id wrapper in the index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,14 @@
         </div>
     </nav>
 
-    <div class=" text-center">
+    <div class=" caption text-center">
         <h1 class="display-4">New York Times Sports Scraper</h1>
         <p></p>
     </div>
 
     <div id="wrapper">
         <div id="articles"></div>
+        <div id="notes"></div>
     </div>
 
 
