added <p> tag in the index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
     </nav>
 
     <div class="caption text-center">
-        <h1 class="display-4">New York Times Sports Scraper</h1>
-        <p></p>
+        <h1 class="display-4">New York Times scraper</h1>
+        <p>Sports Edition</p>
     </div>
 
     <div id="wrapper">
