--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
                 </button>
                 <a class="navbar-brand" href="#"></a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav mr-auto">
                     <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
                    
                 </ul>
