--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-header">
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
@@ -27,7 +27,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
-                    <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="btn btn-danger">Home<span class="sr-only">(current)</span></a></li>
                    
                 </ul>
                 <button type="button" id="scrape-button" class="btn btn-danger">Scrape!</button>
